--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 
     <div class="container">
         <div class="row">
-            <!-- Elementos generados a partir del JSON -->
+            <!-- elementos por JSON -->
             <main id="items" class="col-sm-8 row"></main>
-            <!-- Carrito -->
+            <!-- carrito -->
             <aside class="col-sm-4">
                 <h2>Carrito</h2>
                 <!-- Elementos del carrito -->
                 <ul id="carrito" class="list-group"></ul>
                 <hr>
-                <!-- Precio total -->
+                <!-- precio total -->
                 <p class="text-right">Total: <span id="total"></span>&dollar;</p>
                 <button id="boton-vaciar" class="btn btn-danger">Vaciar</button>
                 <button id="boton-pagar" class="btn btn-normal">Pagar</button>
