--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="row">
             <!-- elementos por JSON -->
             <main id="items" class="col-sm-8 row"></main>
-            <!-- carrito -->
+            <!-- carrito pedido -->
             <aside class="col-sm-4">
-                <h2>Carrito</h2>
-                <!-- Elementos del carrito -->
+                <h2>Tu pedido</h2>
+                <!-- Elementos del carrito pedido-->
                 <ul id="carrito" class="list-group"></ul>
                 <hr>
                 <!-- precio total -->
